--- a/index.html
+++ b/index.html
@@ -617,13 +617,13 @@
         const tripObj = ensureTrip();
         const todos = tripObj.todos;
         const todoDiv = document.createElement('div');
-        todoDiv.className = 'bg-gray-900 rounded-lg p-3 shadow w-full border border-gray-600 text-gray-800 text-right';
+        todoDiv.className = 'bg-gray-900 rounded-lg p-2 shadow w-full border border-gray-600 text-gray-800 text-right';
         todoDiv.innerHTML = `
-            <div class="todoListHeader flex items-center justify-between mb-2">
+            <div class="todoListHeader flex items-center justify-between">
                 <h2 class="text-lg font-bold text-gray-200 flex items-center gap-2"><i class="fa-solid fa-list-check"></i>משימות <span id="todoOpenCount" class="text-sm text-gray-400">(0)</span></h2>
                 <button id="collapseTodosBtn" class="text-gray-300 hover:text-orange-400 text-lg" title="הסתר/הצג"><i class="fa-solid ${tripObj.todosCollapsed ? 'fa-chevron-down' : 'fa-chevron-up'}"></i></button>
             </div>
-            <div id="todoList" class="space-y-2 mb-2" style="display:${tripObj.todosCollapsed ? 'none' : 'block'}"></div>
+            <div id="todoList" class="space-y-2 mb-2 mt-2" style="display:${tripObj.todosCollapsed ? 'none' : 'block'}"></div>
             <div id="todoAddRow" class="flex gap-2 mt-2" style="display:${tripObj.todosCollapsed ? 'none' : 'flex'}">
                 <input id="newTodoInput" class="input w-full px-2 py-1 rounded border bg-gray-800 text-white" type="text" placeholder="הוסף משימה..." />
                 <button id="addTodoBtn" class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700"><i class="fa-solid fa-plus"></i></button>
