--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
     function exportStaticHtml() {
         if (!getDays() || getDays().length === 0) { showToast('אין מה לייצא', true); return; }
         // Minimal inline CSS to keep it readable offline
-    const css = `body{font-family:Arial,Helvetica,sans-serif;background:#0b1220;color:#e5e7eb;padding:10px;line-height:1.1}
+    const css = `body{font-family:Arial,Helvetica,sans-serif;background:#0b1220;color:#e5e7eb;padding:10px;line-height:1.1;margin:auto;max-width:500px}
                  h1{color:#60a5fa;margin-bottom:2px}h2{color:#bfdbfe;margin:0 0 8px 0; font-size: 18px}
                  a{color:#93c5fd;text-decoration:none} 
                 .day{background:#111827;padding:12px;border-radius:8px;margin-bottom:14px;border:1px solid #1f2937; font-size:16px} 
