--- a/index.html
+++ b/index.html
@@ -327,9 +327,10 @@
                         if (!Number.isFinite(lat) || !Number.isFinite(lng)) continue;
                         const url = typeof a.url === 'string' ? a.url : '';
                         const time = typeof a.time === 'string' ? a.time : '';
+                        const price = (typeof a.price === 'string') ? a.price : (Number.isFinite(a.price) ? String(a.price) : '');
                         const comments = typeof a.comments === 'string' ? a.comments : '';
                         const enabled = (typeof a.enabled === 'boolean') ? a.enabled : true;
-                        dayObj.attractions.push({ name: name, coordinates: [lat, lng], url: url, time: time, comments: comments, enabled: enabled });
+                        dayObj.attractions.push({ name: name, coordinates: [lat, lng], url: url, time: time, price: price, comments: comments, enabled: enabled });
                     }
                 }
                 sanitized.push(dayObj);
@@ -892,7 +893,15 @@
         if (attractions.length > 0) {
             const headerDiv = document.createElement('div'); 
             headerDiv.className = 'flex items-center gap-2 text-sm text-gray-200 text-center w-full'; 
-            headerDiv.innerHTML = `<span class="w-6 mr-2"><i class="fa-solid fa-arrows-up-down"></i></span><span class="w-10">הערות</span><span class="w-6"><i class="fa-solid fa-route"></i></span><span class="w-12">שעה</span><span class="w-52">פעילות</span><span class="w-86">קואורדינטות</span><span class="w-32">קישור</span>`; 
+            headerDiv.innerHTML = `
+            <span class="w-6 mr-2 rounded bg-gray-900 text-right px-2"><i class="fa-solid fa-arrows-up-down"></i></span>
+            <span class="w-10 rounded bg-gray-900"><i class="fa-solid fa-comments"></i></span>
+            <span class="w-6 rounded bg-gray-900"><i class="fa-solid fa-route"></i></span>
+            <span class="w-16 rounded bg-gray-900 text-right px-2">שעה</span>
+            <span class="w-16 rounded bg-gray-900"><i class="fa-solid fa-coins"></i></span>
+            <span class="w-64 rounded bg-gray-900 text-right px-2">פעילות</span>
+            <span class="w-64 rounded bg-gray-900 text-right px-2">קואורדינטות</span>
+            <span class="w-64 rounded bg-gray-900 text-right px-2">קישור</span>`; 
             container.appendChild(headerDiv);
         }
         attractions.forEach((attr, attrIdx) => {
@@ -959,7 +968,8 @@
                 <button class="cursor-move px-1 py-1 text-blue-400 hover:text-blue-600 order-btn" title="שנה סדר" draggable="true"><i class="fa-solid fa-bars"></i></button>
                 <button class="px-1 py-1 ml-1 ${commentBtnClass} hover:text-gray-200 comment-toggle-btn" title="הערות" style="font-size:1.2em;">${isExpanded ? '<i class=\"fa-solid fa-chevron-up\"></i>' : '<i class=\"fa-solid fa-comments\"></i>'}</button>
                 <button class="ml-1 toggle-attraction-btn ${enabled ? 'text-green-500' : 'text-gray-300'} rounded px-1 py-1" title="${enabled ? 'מוצג במפה' : 'מוסתר מהמפה'}">${enabled ? '<i class=\"fa-solid fa-toggle-on\"></i>' : '<i class=\"fa-solid fa-toggle-off\"></i>'}</button>
-                <input class="input w-32 px-2 py-1 rounded border time-input" type="text" data-day="${dayIdx}" data-attr="${attrIdx}" value="${attr.time || ''}" placeholder="hh:mm">
+                <input class="input w-16 px-2 py-1 rounded border time-input" type="text" data-day="${dayIdx}" data-attr="${attrIdx}" value="${attr.time || ''}" placeholder="hh:mm">
+                <input class="input w-16 px-2 py-1 rounded border price-input" type="text" data-day="${dayIdx}" data-attr="${attrIdx}" value="${attr.price || ''}" placeholder="$$$" onchange="editAttraction(${dayIdx},${attrIdx},'price',this.value)">
                 <input class="input w-64 px-2 py-1 rounded border" value="${attr.name}" onchange="editAttraction(${dayIdx},${attrIdx},'name',this.value)">
                 <input class="input w-64 px-2 py-1 rounded border coordinates" type="text" value="${attr.coordinates ? attr.coordinates.join(',') : ''}" onchange="editAttraction(${dayIdx},${attrIdx},'coordinates',this.value)">
                 <input class="input w-64 px-2 py-1 rounded border" type="url" placeholder="https://..." value="${attr.url || ''}" onchange="editAttraction(${dayIdx},${attrIdx},'url',this.value)" dir="ltr">
@@ -1027,7 +1037,7 @@
     function onUrlClick(url) { if (url && typeof url === 'string' && url.trim()) window.open(url, '_blank'); }
     window.addDay = function() { const days = getDays(); const nextDay = days && days.length ? days[days.length-1].day+1 : 1; days.push({day: nextDay, dow:'', attractions:[], state:'in-progress', color: undefined, colorA: undefined, colorB: undefined}); setDays(days); renderEditor(); refreshMapDebounced(); saveTripToStorageDebounced(); }
     window.deleteDay = function(dayIdx) { showConfirmModal('למחוק את היום הזה?', function(confirmed) { if (confirmed) { const days = getDays(); days.splice(dayIdx,1); setDays(days); renderEditor(); refreshMapDebounced(); saveTripToStorageDebounced(); } }); }
-    window.addAttraction = function(dayIdx) { const days = getDays(); if (!days[dayIdx].attractions) days[dayIdx].attractions = []; days[dayIdx].attractions.push({name:'',coordinates:[0,0],time:'',comments:''}); setDays(days); renderEditor(); refreshMapDebounced(); saveTripToStorageDebounced(); }
+    window.addAttraction = function(dayIdx) { const days = getDays(); if (!days[dayIdx].attractions) days[dayIdx].attractions = []; days[dayIdx].attractions.push({name:'',coordinates:[0,0],time:'',price:'',comments:''}); setDays(days); renderEditor(); refreshMapDebounced(); saveTripToStorageDebounced(); }
     window.deleteAttraction = function(dayIdx, attrIdx) { showConfirmModal('למחוק את הפעילות?', function(confirmed) { if (confirmed) { const days = getDays(); days[dayIdx].attractions.splice(attrIdx,1); setDays(days); renderEditor(); refreshMapDebounced(); saveTripToStorageDebounced(); } }); }
     window.editAttraction = function(dayIdx, attrIdx, field, value) {
         if (field === 'coordinates') {
